modal Error solved

--- a/src/app/all-work/all-work.component.html
+++ b/src/app/all-work/all-work.component.html
@@ -182,19 +182,19 @@
       
     </div>
   <div class="modal-body">
-    <table style="width:100%">
+    <table  class="table-responsive">
         <tr><td>type:</td>
-        <td>Date</td><th>{{selected.getDate()}}</th>
+        <!-- <td>Date</td><th>{{selected.getDate()}}</th> -->
         </tr>
         <tr>
-        <td>Totoal Old GOld:</td><th>{{selected.}}</th>
+        <!-- <td>Totoal Old GOld:</td><th>{{selected.}}</th> -->
         <!-- <td>Date:</td><th>{{selected.getDueDate()}}</th> -->
         </tr>
     </table>
 
 
     <hr>
-    <table style="width:100%" border="1">
+    <table style="width:100%" border="1" class="table-responsive">
        <tr >
              
              <th>S no.</th>
