--- a/src/app/order-estimation/order-estimation.component.html
+++ b/src/app/order-estimation/order-estimation.component.html
@@ -237,8 +237,9 @@
                     <mat-list>
                       
                       <mat-list-item *ngFor="let user of selectedUser" style="margin-bottom:13px;" class="contactList" (click)="onuserClicked(user)" >
-                          <div>
-                            <div class="circleAlphabet">
+                        <!-- <div [className]="color.getColor()" > -->
+                          <div> 
+                          <div class="circleAlphabet">
                               {{ user.name[0]}}
                             </div>
                           </div>
