--- a/src/app/all-work/all-work.component.html
+++ b/src/app/all-work/all-work.component.html
@@ -289,6 +289,15 @@
       <div class="mat-elevation-z8 table-responsive" > 
             <table  mat-table [dataSource]="dataSource" matSort  matTableExporter #exporter="matTableExporter" style="width:100%">
             
+
+              <ng-container matColumnDef="checked">
+                <th mat-header-cell *matHeaderCellDef>Check</th>
+                <td mat-cell *matCellDef="let element"> 
+                  <input type="checkbox">
+                </td>
+              </ng-container> 
+
+
               <ng-container matColumnDef="status">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>Status</th>
                 <td mat-cell *matCellDef="let element" >
@@ -307,7 +316,11 @@
                 </td>
               </ng-container>
 
+              <!-- <ng-container matColumnDef="checkbox">
+                <td mat-cell > <input type="checkbox" (change)="checkSelected()"></td>
+              </ng-container> -->
              
+              >
             <!-- Position Column -->
             <ng-container matColumnDef="order_id">
               <th mat-header-cell *matHeaderCellDef  mat-sort-header> Order ID</th>
@@ -327,11 +340,36 @@
               <td mat-cell *matCellDef="let element" (click)="rowClick(template,element)" > {{element.name}}<br>{{element.weight}} gms
             </ng-container>
 
-            <!-- Phone Column -->
-            <!-- <ng-container matColumnDef="phone_no">
-              <th mat-header-cell *matHeaderCellDef mat-sort-header>Phone</th>
-              <td mat-cell *matCellDef="let element" (click)="rowClick(template,element)"> {{element.customer.phone}}  </td>
-            </ng-container> -->
+
+            <!--Related to image set-->
+            <ng-container matColumnDef="image">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header>Image</th>
+
+              <td mat-cell *matCellDef="let element">
+                <ng-container *ngIf="element.image==null">
+                  <input #file type="file" accept='image/*' (change)="element.imageUploader.preview(file.files);uploadItemImage(element);" />
+                  <img [src]="slectedimage" alt="">
+                </ng-container>
+
+                <ng-container *ngIf="element.image!=null">
+                  <!-- {{element.image}} -->
+                  <img [src]="getImage(element)" alt="" height="15%" width="30%" (click)="swipe(element)">
+                </ng-container>
+
+                  <!-- <td *ngIf="item.isImageSet()"><img [src]="getselectedIamge(item)" height="50%" width="100%"></td>  
+                  <td *ngIf="!item.isImageSet()">    
+                       <span style="color:red;" *ngIf="item.imageUploader.message">{{item.imageUploader.message}}</span>
+                     <input #file type="file" accept='image/*' (change)="item.imageUploader.preview(file.files);uploadItemImage(item);" />
+                       <input  type="file" accept='image/*' (change)="uploadItemImage($event,selected.id)" /> --> 
+                     <!-- <img [src]="currentImage" height="60%" width="100%" *ngIf="currentImage"> -->
+                     <!-- <img *ngIf="selectedimage" [src]="selectedimage" height="100" class="img-thumbnail"> -->
+                     <!-- {{item.imageUploader.imgURL}} -->
+                   <!-- </td>  -->
+                  <!--End of item related image-->
+
+                </td>
+              </ng-container >
+    
         
             <!-- Weight Column -->
             <ng-container matColumnDef="cost">
@@ -374,6 +412,7 @@
         
   </div>
   </div>
+  
   <button (click)="goToOrderEstimation()" id="add"  style="background: #1B81EB" mat-fab mat-accent class="fixedbutton"><span>
         <li  class="fa fa-plus" style="margin-right: 5px;cursor: pointer;color: white"></li>
       </span>
