--- a/src/app/repair/repair.component.html
+++ b/src/app/repair/repair.component.html
@@ -1,3 +1,150 @@
+
+<!---START OF CONTACTS--->
+<ng-template #contactsTemplate>
+  <div class="side-modal">
+    <div class="modal-header ">
+     <h3 class="modal-title ">Contacts</h3>
+    <button type="button" display="inline" class="close pull-right" aria-label="Close" (click)="contactsModal.hide()">
+        <span aria-hidden="true">&times;</span>
+      </button>
+     
+      
+    </div>
+    <div class="modal-body">
+      <table style="width:100%;">
+          <tr>
+            <td>      
+              <mat-form-field>
+                <input matInput type="text" placeholder="Name" [(ngModel)]="contact.name">
+              </mat-form-field>
+           </td>
+            <td>
+              <mat-form-field>
+                <input matInput  type="number" placeholder="Phone" [(ngModel)]="contact.phone">
+              </mat-form-field>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <mat-form-field>
+                <input matInput type='email' placeholder="Email" [(ngModel)]="contact.email">
+              </mat-form-field>
+            </td>
+            <td>
+              <button mat-raised-button color='primary' (click)="saveContact()">Add Contact</button>
+            </td>
+          </tr>
+
+
+      </table>
+
+      <br>
+      <hr>
+     <ng-container *ngIf="contacts!=null">
+      <mat-list>
+        
+        <mat-list-item *ngFor="let contact of contacts" style="margin-bottom:13px;" class="contactList" (click)="onContactClicked(contact)" >
+            <div [className]="color.getColor()" >
+              <div class="circleAlphabet">
+                {{ contact.name[0]}}
+              </div>
+            </div>
+            <span>
+              <b>{{contact.name}}</b>
+              <br>
+              {{contact.phone}}
+              </span>
+          
+    
+        </mat-list-item>
+      </mat-list>
+     </ng-container>
+     
+     <ng-container *ngIf="contacts==null">
+       No Contacts Available
+     </ng-container>
+
+    </div>
+
+  </div>
+
+</ng-template>
+
+<!---END OF CONTACTS--->
+
+
+
+ <!------START OF MAKING CHARGE MODAL------>
+<ng-template #template  id="side-modal" style="padding:20px;">
+<div class="side-modal">
+    <div class="modal-header ">
+     <h3 class="modal-title ">Items</h3>
+    <button type="button" display="inline" class="close pull-right" aria-label="Close" (click)="orderModal.hide()">
+        <span aria-hidden="true">&times;</span>
+      </button>
+     
+      
+    </div>
+  <div class="modal-body">
+    <table  class="table-responsive">
+      <tr><td>Name:</td><th>{{selected.customer}}</th>
+        <td>Email:</td><th>{{selected.email}}</th>
+        </tr>
+        <tr>
+        <td>Phone:</td><th>{{selected.phone}}</th>
+        <!-- <td>Date:</td><th>{{selected.getDate()}}</th> -->
+        </tr>
+    </table>
+
+
+    <hr>
+    <table style="width:100%" border="1" class="table-responsive">
+       <tr >
+             
+             <th>S no.</th>
+             <!-- <th>Due date</th> -->
+             <!-- <th>Assigned To</th> -->
+             <th>Description</th>
+             <th>Weight</th>
+             <th>Total</th>
+              <!-- <th>Advance</th> -->
+             
+             </tr>
+
+        <tr style="padding:10px;margin-top:40px;"  *ngFor="let item of selected.items;let i =index" >
+             
+
+             <td >
+                <b> {{i+1}}</b>
+             </td>
+             <td>{{item.name}}</td>
+             <td>{{item.weight}}</td>
+             <td>{{item.total}}</td>
+
+             
+             </tr >   
+            
+             <tr style="margin-top:30px;">
+             <td></td>
+             <td></td>
+             <td>Advance</td>
+             <td>{{selected.advance}}</td>
+             </tr>    
+    </table>
+    <div align="right" style="margin-top:20px; ">
+        <button mat-raised-button color="primary" align="right">Pay</button>
+
+    </div>
+
+  </div>
+
+  </div>
+</ng-template>
+
+
+
+
+
 <div class="container-fluid" style="margin-top: 20px;">
   
     <div class="row">
@@ -31,40 +178,48 @@
       <div class="mat-elevation-z8 table-responsive" >
             <table  mat-table [dataSource]="dataSource" matSort  matTableExporter #exporter="matTableExporter">
         
+              <ng-container matColumnDef="checked">
+                <th mat-header-cell *matHeaderCellDef>Check</th>
+                <td mat-cell *matCellDef="let element"> 
+                  <input type="checkbox" (change)="selectedRow(element, $event)">
+                </td>
+              </ng-container> 
+
+
             <!-- Position Column -->
             <ng-container matColumnDef="s.no">
               <th mat-header-cell *matHeaderCellDef  mat-sort-header> S.no </th>
-              <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+              <td mat-cell *matCellDef="let element" (click)="rowClick(template,element)"> {{element.id}} </td>
             </ng-container>
         
-            <!-- Name Column -->
+            <!-- Name Column
             <ng-container matColumnDef="date">
               <th mat-header-cell *matHeaderCellDef mat-sort-header> Date</th>
               <td mat-cell *matCellDef="let element"> {{element.ordertype}} </td>
-            </ng-container>
+            </ng-container> -->
 
 
 
-            <ng-container matColumnDef="repair">
-              <th mat-header-cell *matHeaderCellDef mat-sort-header>Repair no</th>
-              <td mat-cell *matCellDef="let element"> {{element.material}} </td>
+            <ng-container matColumnDef="customer">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header>Customer</th>
+              <td mat-cell *matCellDef="let element" (click)="rowClick(template,element)"> {{element.customer}} </td>
             </ng-container>
         
-            <!-- Weight Column -->
-            <ng-container matColumnDef="assign">
-              <th mat-header-cell *matHeaderCellDef mat-sort-header> Assigned to </th>
-              <td mat-cell *matCellDef="let element"> {{element.amount}} </td>
+          
+            <ng-container matColumnDef="rate">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header> rate </th>
+              <td mat-cell *matCellDef="let element" (click)="rowClick(template,element)"> {{element.rate}} </td>
             </ng-container>
         
             <!-- Symbol Column -->
-            <ng-container matColumnDef="status">
-              <th mat-header-cell *matHeaderCellDef mat-sort-header> Status </th>
-              <td mat-cell *matCellDef="let element">{{element.ounce_amount}} </td>
+            <ng-container matColumnDef="total">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header> Total </th>
+              <td mat-cell *matCellDef="let element">{{element.total}} </td>
             </ng-container>
 
-            <ng-container matColumnDef="due">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Due date </th>
-                    <td mat-cell *matCellDef="let element">{{element.seller_amount}} </td>
+            <ng-container matColumnDef="advance">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Advance </th>
+                    <td mat-cell *matCellDef="let element" (click)="rowClick(template,element)">{{element.advance}} </td>
                   </ng-container>
 
                
