--- a/src/app/repair-estimation/repair-estimation.component.html
+++ b/src/app/repair-estimation/repair-estimation.component.html
@@ -135,7 +135,7 @@
         </div>
 
             <div class="col-md-6">
-                <mat-form-field>
+                <!-- <mat-form-field>
                     <input matInput [matDatepicker]="picker" placeholder="Date">
                     <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
                     <mat-datepicker #picker></mat-datepicker>
@@ -144,7 +144,7 @@
                   <mat-form-field>
                     <input matInput placeholder="Order no">
                   </mat-form-field>
-                  <br>
+                  <br> -->
                   <mat-form-field class="mt-2">
                     <textarea matInput placeholder="Rate" [(ngModel)]="repair.rate"></textarea>
                   </mat-form-field>
