--- a/src/app/repair/repair.component.html
+++ b/src/app/repair/repair.component.html
@@ -1,6 +1,6 @@
 
 <!---START OF CONTACTS--->
-<ng-template #contactsTemplate>
+<!-- <ng-template #contactsTemplate>
   <div class="side-modal">
     <div class="modal-header ">
      <h3 class="modal-title ">Contacts</h3>
@@ -68,7 +68,7 @@
 
   </div>
 
-</ng-template>
+</ng-template> -->
 
 <!---END OF CONTACTS--->
 
