--- a/src/app/all-work/all-work.component.html
+++ b/src/app/all-work/all-work.component.html
@@ -300,7 +300,7 @@
 
               <ng-container matColumnDef="status">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>Status</th>
-                <td mat-cell *matCellDef="let element" >
+                <td mat-cell *matCellDef="let element" (change)="changeStatus(element)" >
                   <!--List of statuses to be shown
                      0 pending - info
                      1 processing - pending
@@ -348,7 +348,7 @@
               <td mat-cell *matCellDef="let element">
                 <ng-container *ngIf="element.image==null">
                   <input #file type="file" accept='image/*' (change)="element.imageUploader.preview(file.files);uploadItemImage(element);" />
-                  <img [src]="slectedimage" alt="">
+                  <img [src]="selectedimage" alt="">
                 </ng-container>
 
                 <ng-container *ngIf="element.image!=null">
