--- a/src/app/orders/orders.component.html
+++ b/src/app/orders/orders.component.html
@@ -206,6 +206,7 @@
              <th>MC</th>
              <th>Stone Charge</th>
              <th>Total</th>
+             <th>Status</th>
 
              
              </tr>
@@ -237,7 +238,11 @@
              <td >{{money(item.makingCharge)}}<mat-icon style="font-size:12px;color:green;cursor:pointer;" (click)="openSelectedMakingChargeModal(item,template2,true)"  >info_outline</mat-icon></td>
             <td >{{money(item.stoneCharge)}}<mat-icon style="font-size:12px;color:green;cursor:pointer;" (click)="openSelectedMakingChargeModal(item,template2,false)"  >info_outline</mat-icon></td>
              <td>{{money(item.total)}}</td>
-
+              <td>
+                <p *ngIf="item.status==0"><mat-icon style="color:red">info</mat-icon>Pending</p>
+                <p *ngIf="item.status==1"><mat-icon style="color:blue">how_to_reg</mat-icon>Assigned</p>
+                <p *ngIf="item.status==2"><mat-icon style="color:green">check_circle_outline</mat-icon>Completed</p>
+              </td>
              
              </tr >   
             
@@ -267,22 +272,40 @@
 <div class="container-fluid" style="margin-top: 20px;">
   
     <div class="row">
-      <div class="col-md-10">
-         
+      <div class="col-md-4">
       
-  
+        <mat-form-field class="mt-2">
+          <mat-label>Status</mat-label>
+          <select matNativeControl required [(ngModel)]="status" (ngModelChange)="onStatusSelected($event)">
+            <option value=0>Pending</option>
+            <option value=1>Assigned</option>
+            <option value=2>Ready</option>
+            <option value=3>completed</option>
+          </select>
+        </mat-form-field>
       </div>
-     
+
+      <div class="col-md-6">
+      </div>
       
-     <!-- <div class="col-md-2 text-right">
+     <div class="col-md-2 text-right">
           <mat-form-field>
               <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
             </mat-form-field>
-        </div> -->
+        </div>
         
     </div>
 
+    <div class="col-md-4" *ngIf="isChecked">
 
+      <mat-form-field class="mt-2">
+        <mat-label>Status</mat-label>
+        <select matNativeControl required [(ngModel)]="status" (ngModelChange)="onSelectedStatus($event)">
+          <option value=0>Ready</option>
+          <option value=1>Completed</option>
+        </select>
+      </mat-form-field>
+    </div>
   
 
 
@@ -304,6 +327,13 @@
             <table class="table"  mat-table [dataSource]="dataSource" matSort matSortActive="order_id" matSortDirection="asc" matSortDisableClear
               matTableExporter #exporter="matTableExporter"  style="width:100%">
         
+              <ng-container matColumnDef="checked">
+                <th mat-header-cell *matHeaderCellDef>Check</th>
+                <td mat-cell *matCellDef="let element"> 
+                  <input type="checkbox" (change)="selectedRow(element, $event)">
+                </td>
+              </ng-container> 
+
             <!-- Position Column -->
             <ng-container matColumnDef="order_id">
               <th mat-header-cell *matHeaderCellDef  mat-sort-header> Order ID</th>
@@ -323,12 +353,26 @@
             </ng-container> 
         
             <!-- Weight Column -->
-            <ng-container matColumnDef="Status">
+            <ng-container matColumnDef="totalCost">
               <th mat-header-cell *matHeaderCellDef mat-sort-header> Total cost </th>
               <td mat-cell *matCellDef="let element" (click)="rowClick(template,element)"> {{money(element.total)}} </td>
             </ng-container>
 
-   
+            <ng-container matColumnDef="status">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header>Status</th>
+              <td mat-cell *matCellDef="let element">
+                <!--List of statuses to be shown
+                   0 pending - info
+                   1 assigned - how_to_reg
+                   2 completed - check_circle_outline
+                -->
+                <p *ngIf="element.status==0"><mat-icon style="color:red">info</mat-icon>Pending</p>
+                <!-- <p *ngIf="element.status==1"><mat-icon style="color:#1B81EB">history</mat-icon>Processing</p> -->
+                <p *ngIf="element.status==1"><mat-icon style="color:blue">how_to_reg</mat-icon>Assigned</p>
+                <!-- <p *ngIf="element.status==3"><mat-icon>thumb_up</mat-icon>Ready</p> -->
+                <p *ngIf="element.status==3"><mat-icon style="color:green">check_circle_outline</mat-icon>Completed</p>
+              </td>
+            </ng-container>
 
             
 
